# lowkey

./: .SRCINFO  .gitignore  CMakeLists.txt  LICENSE  PKGBUILD  README.md  cmake_uninstall.cmake.in  en.sh  install.sh  uninstall.sh
src/: battery-monitor.service  main.cpp
